<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NKU Parking Locator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Strings for Login Layout -->
    <string name="login_label">Login</string>
    <string name="lblLogin_Username">Username:</string>
    <string name="lblLogin_Password">Password:</string>
    <string name="txtLogin_Username_Hint">Enter your email address</string>
    <string name="txtLogin_Password_Hint">Enter your password</string>
    <string name="btnLogin_Login">Login</string>
    <string name="lblLogin_ForgotUsername">I Forgot My Username or Password</string>
    <string name="lblLogin_Register">New user? Register an account</string>
    
    <!-- Strings for Forgot Username Layout -->
    <string name="lblForgotUsername_Description">Enter your e-mail address below to have your username and a temporary password sent to your email.</string>
    <string name="lblForgotUsername_Email">Email:</string>
    <string name="txtForgotUsername_Email_Hint">Enter your E-Mail Address:</string>
    <string name="btnForgotUsername_Send">Send</string>
    
    <!-- Strings for User Registration Layout -->
    <string name="user_registration_label">New User Registration</string>
    <string name="lblUserRegistration_FirstName">First Name:</string>
    <string name="lblUserRegistration_LastName">Last Name:</string>
    <string name="lblUserRegistration_AddressLine1">Address Line 1:</string>
    <string name="lblUserRegistration_AddressLine2">Address Line 2:</string>
    <string name="lblUserRegistration_City">City:</string>
    <string name="lblUserRegistration_State">State:</string>
    <string name="lblUserRegistration_PostalCode">Postal Code:</string>
    <string name="lblUserRegistration_PhoneNumber1">Phone Number 1:</string>
    <string name="lblUserRegistration_PhoneNumber2">Phone Number 2:</string>
    <string name="lblUserRegistration_Email">Email Address:</string>
    <string name="lblUserRegistration_UserName">Username:</string>
    <string name="lblUserRegistration_Password">Password:</string>
    <string name="lblUserRegistration_ConfirmPassword">Confirm Password:</string>
    <string name="strUserRegistration_InitialState">Kentucky</string>
    <string name="lblUserRegistration_Role">Account Type:</string>
    
    <string name="txtUserRegistration_FirstName_Hint">Enter your first name</string>
    <string name="txtUserRegistration_LastName_Hint">Enter your last name</string>
    <string name="txtUserRegistration_AddressLine1_Hint">Enter your Address Line 1</string>
    <string name="txtUserRegistration_AddressLine2_Hint">Enter your Address Line 2</string>
    <string name="txtUserRegistration_City_Hint">Enter your City</string>
    <string name="txtUserRegistration_PostalCode_Hint">Enter your Postal Code</string>
    <string name="txtUserRegistration_PhoneNumber1_Hint">Enter your Phone Number 1</string>
    <string name="txtUserRegistration_PhoneNumber2_Hint">Enter your Phone Number 2</string>
    <string name="txtUserRegistration_Email_Hint">Enter your NKU Email</string>
    <string name="txtUserRegistration_Password_Hint">Enter a password</string>
    <string name="txtUserRegistration_ConfirmPassword_Hint">Confirm password</string>
    
    <string name="btnUserRegistration_Confirm">Confirm</string>
    <string name="btnUserRegistration_Clear">Clear</string>
    
    <string name="invalid_email">Please enter a valid email address.</string>
    <string name="invalid_password">Please enter a valid password</string>
    <string name="invalid_passwords">The passwords do not match. Please re-enter your password.</string>
    <string name="invalid_names">Please enter a first and last name.</string>
    <string name="invalid_password_length">Password must be at least four characters long.</string>
    <string name="email_taken">Email address already in use.</string>
    <string name="user_created">User created successfully!</string>
    
    <string-array name="roles">
        <item>Visitor</item>
        <item>Student</item>
    </string-array>
    
    <!-- Account Settings Strings -->
    <string name="account_settings_label">Change Password</string>
    <string name="password_changed">Password changed successfully.</string>
    <string name="txtOldPassword_hint">Enter your current password</string>
    <string name="txtNewPassword_hint">Enter a new password</string>
    <string name="txtConfirmedPassword_hint">Confirm your new password</string>
    <string name="old_password_bad">The current password is not correct</string>
    
    <!-- Spot Detail Strings -->
    <string name="spot_detail_label">Lot Information</string>
    
    <string-array name="States">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    
    <!-- String for Main Menu -->
    <string name="menuMain_Login">Login</string>
    <string name="menuMain_Logout">Logout</string>
    <string name="menuMain_EditUser">Change Password</string>
    <string name="logged_out">Successfully logged out</string>
    <string name="menuMain_CheckIn">Check In</string>
    <string name="menuMain_CheckOut">Check Out</string>
    <string name="checked_in">Successfully Checked In</string>
    <string name="checked_out">Successfully Checked Out</string>
    
    <!-- Strings for SpotList -->
    <string name="user_already_has_reservation">You must check out of your current reservation before requesting another.</string>
    <string name="spot_unavailable">This spot is not available.</string>
    
    <!--  Miscellaneous strings -->
    <string name="empty_string"></string>
    <string name="parkingDetailAvailable"> = Available Spot</string>
</resources>
