<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="8"
>

    <EditText
		android:id="@+id/txtUserRegistration_Email"
        android:hint="@string/txtUserRegistration_Email_Hint"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:textSize="@dimen/textview_FontSize"
        android:inputType="textEmailAddress"
        android:paddingBottom="@dimen/paddingBetweenRows"
        android:background="@drawable/rounded_edittext"
        android:layout_marginTop="5dp"
	/>
    
    <EditText
		android:id="@+id/txtUserRegistration_FirstName"
        android:hint="@string/txtUserRegistration_FirstName_Hint"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textSize="@dimen/textview_FontSize"
        android:inputType="textEmailAddress"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:paddingBottom="@dimen/paddingBetweenRows"
        android:background="@drawable/rounded_edittext"
        android:layout_marginTop="5dp"
	/>
    
    <EditText
		android:id="@+id/txtUserRegistration_LastName"
        android:hint="@string/txtUserRegistration_LastName_Hint"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textSize="@dimen/textview_FontSize"
        android:inputType="textEmailAddress"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:paddingBottom="@dimen/paddingBetweenRows"
        android:background="@drawable/rounded_edittext"
        android:layout_marginTop="5dp"
	/>

    <EditText
		android:id="@+id/txtUserRegistration_Password"
        android:hint="@string/txtUserRegistration_Password_Hint"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textSize="@dimen/textview_FontSize"
        android:inputType="textPassword"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:paddingBottom="@dimen/paddingBetweenRows"
        android:background="@drawable/rounded_edittext"
        android:layout_marginTop="5dp"
	/>
    
    <EditText
		android:id="@+id/txtUserRegistration_ConfirmPassword"
        android:hint="@string/txtUserRegistration_ConfirmPassword_Hint"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textSize="@dimen/textview_FontSize"
        android:inputType="textPassword"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:paddingBottom="@dimen/paddingBetweenRows"
        android:background="@drawable/rounded_edittext"
        android:layout_marginTop="5dp"
	/>
    
    <TextView
        android:id="@+id/lblUserRegistration_Role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:text="@string/lblUserRegistration_Role" />
    
    <Spinner
        android:id="@+id/spinUserRegistration_Role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal" 
        android:spinnerMode="dropdown" />
    
	<Button
	    android:id="@+id/btnUserRegistration_Confirm"
    	android:text="@string/btnUserRegistration_Confirm"
    	android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2"
    	android:layout_gravity="fill_horizontal"
    	android:textSize="@dimen/textview_FontSize"
    	android:onClick="onConfirmClick"
    	android:layout_marginTop="5dp"
	/>
	
	<Button
	    android:id="@+id/btnUserRegistration_Clear"
    	android:text="@string/btnUserRegistration_Clear"
    	android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_columnSpan="2"
    	android:layout_gravity="fill_horizontal"
    	android:textSize="@dimen/textview_FontSize"
    	android:onClick="onClearClick"
	/>

</GridLayout>